<resources>
    <string name="app_name">EuroCup</string>

    <!-- places -->
    <string name="euro_place_1960">France 1960</string>
    <string name="euro_place_1964">Spain 1964</string>
    <string name="euro_place_1968">Italy 1968</string>
    <string name="euro_place_1972">Belgium 1972</string>
    <string name="euro_place_1976">Yugoslavia 1976</string>
    <string name="euro_place_1980">Italy 1980</string>
    <string name="euro_place_1984">France 1984</string>
    <string name="euro_place_1988">FRG 1988</string>
    <string name="euro_place_1992">Sweden 1992</string>
    <string name="euro_place_1996">England 1996</string>
    <string name="euro_place_2000">Belgium/Netherlands 2000</string>
    <string name="euro_place_2004">Portugal 2004</string>
    <string name="euro_place_2008">Austria/Switzerland 2008</string>
    <string name="euro_place_2012">Ukraine/Poland 2012</string>
    <string name="euro_place_2016">France 2016</string>

    <!-- euroCupActivity -->
    <string name="euro_name">UEFA Euro</string>
    <string name="euro_location">Location: </string>
    <string name="euro_winner">Winner: </string>
    <string name="button_play_off">Play-off</string>
    <string name="button_group_stage">Group stage</string>
    <string name="button_wiki">View more on wiki</string>
    <string name="wiki_url_ru">https://ru.wikipedia.org/wiki/%D0%A7%D0%B5%D0%BC%D0%BF%D0%B8%D0%BE%D0%BD%D0%B0%D1%82_%D0%95%D0%B2%D1%80%D0%BE%D0%BF%D1%8B_%D0%BF%D0%BE_%D1%84%D1%83%D1%82%D0%B1%D0%BE%D0%BB%D1%83_</string>
    <string name="wiki_url">http://en.wikipedia.org/wiki/UEFA_Euro_</string>

    <!-- Group headers -->
    <string name="group_place">#</string>
    <string name="group_country">Country</string>
    <string name="group_games">G</string>
    <string name="group_wins">W</string>
    <string name="group_draws">D</string>
    <string name="group_loses">L</string>
    <string name="group_balls">B</string>
    <string name="group_points">P</string>


</resources>
